--- a/other/otroinx.html
+++ b/other/otroinx.html
@@ -7,8 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Esta es mi otra página web</h1>
-    <p>Primera modificación local</p>
-    <H2>Primer modificación 2</H2>
+    <h2>Vení pa acá</h2>
 </body>
 </html>
