--- a/other/otroinx.html
+++ b/other/otroinx.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>Vení pa acá</h2>
+    <h2>Rama nueva</h2>
 </body>
-</html>
+</html>             
